--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -55,7 +55,7 @@
     }
 
     // Default color
-    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border);
+    @include button-color($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border, $btn-default-active-hover-bg);
 }
 
 // Future-proof disabling of clicks on `<a>` elements
@@ -66,25 +66,35 @@ fieldset:disabled a.btn {
 
 // Contextual color variants
 @each $theme, $colors in $context-themes {
-    $color:        map-get($colors, "control-color");
-    $bg:           map-get($colors, "control-bg");
-    $border:       map-get($colors, "control-border");
-    $hover-color:  map-get($colors, "control-hover-color");
-    $hover-bg:     map-get($colors, "control-hover-bg");
-    $hover-border: map-get($colors, "control-hover-border");
+    $bg:                map-get($colors, "control-bg");
+    $border:            map-get($colors, "control-border");
+    $hover-bg:          map-get($colors, "control-hover-bg");
+    $hover-border:      map-get($colors, "control-hover-border");
+    $active-hover-bg:   map-get($colors, "control-active-hover-bg");
+
+    $color:        color-if-contrast($btn-default-color, $bg);
+    $hover-color:  color-if-contrast($color, $hover-bg);
 
     .btn-#{$theme} {
-        @include button-variant($color, $bg, $border, $hover-color, $hover-bg, $hover-border);
+        @include button-color($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg);
     }
 }
 
 // Outline variant - remove all backgrounds
 @each $theme, $colors in $context-themes {
     $color:        map-get($colors, "control-bg");
+    $bg:           transparent;
     $border:       map-get($colors, "control-border");
+    $hover-color:  color-if-contrast($white, $bg);
+    $hover-bg:     $color;
+    $hover-border: map-get($colors, "control-hover-border");
+    $active-hover-bg:   map-get($colors, "control-active-hover-bg");
+
+    //$color:        color-if-contrast($color, $white);
+    $hover-color:  color-if-contrast($hover-color, $hover-bg);
 
     .btn-outline-#{$theme} {
-        @include button-outline-variant($color, $border);
+        @include button-color($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg);
     }
 }
 
@@ -92,7 +102,7 @@ fieldset:disabled a.btn {
 // Make a button look and behave like a link
 .btn-link {
     text-decoration: $link-decoration;
-    @include button-variant($link-color, transparent, transparent, $link-hover-color, transparent, transparent);
+    @include button-color($link-color, transparent, transparent, $link-hover-color, transparent, transparent, transparent);
     @include box-shadow(none);
 
     @include hover-focus {
