--- a/scss/functions/_map-util.scss
+++ b/scss/functions/_map-util.scss
@@ -5,7 +5,7 @@
 // @param {Map} $map - Map
 // @param {Arglist} $keys - Key chain
 // @return {*} - Desired value
-// Example: $color: map-deep-get($context-themes, "primary", "control-color");
+// Example: $color: map-deep-get($context-themes, "primary", "control-bg");
 @function map-deep-get($map, $keys...) {
     @each $key in $keys {
         $map: map-get($map, $key);
