rename mixins for alert and list group

--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -32,10 +32,10 @@
 @each $theme, $colors in $context-themes {
     $color:       map-get($colors, "context-color");
     $bg:          map-get($colors, "context-bg");
-    $border:      map-get($colors, "context-border");
+    $border:      map-get($colors, "context-border-color");
     $hover-color: map-get($colors, "context-hover-color");
 
     .alert-#{$theme} {
-        @include alert-variant($color, $bg, $border, $hover-color);
+        @include alert-color($color, $bg, $border, $hover-color);
     }
 }
