--- a/scss/mixins/_lists.scss
+++ b/scss/mixins/_lists.scss
@@ -7,7 +7,7 @@
 }
 
 // List Groups
-@mixin list-group-item-variant($state, $bg, $color, $hover-bg, $hover-color) {
+@mixin list-group-item-color($state, $bg, $color, $hover-bg, $hover-color) {
     .list-group-item-#{$state} {
         color: $color;
         background-color: $bg;
