--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -55,7 +55,7 @@
     }
 
     // Default color
-    @include button-color($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border, $btn-default-active-hover-bg);
+    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border, $btn-default-active-hover-bg);
 }
 
 // Future-proof disabling of clicks on `<a>` elements
@@ -76,7 +76,7 @@ fieldset:disabled a.btn {
     $hover-color:  color-if-contrast($color, $hover-bg);
 
     .btn-#{$theme} {
-        @include button-color($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg);
+        @include button-variant($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg);
     }
 }
 
@@ -92,7 +92,7 @@ fieldset:disabled a.btn {
     $hover-color: color-if-contrast($btn-outline-hover-color, $hover-bg);
 
     .btn-outline-#{$theme} {
-        @include button-color($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg);
+        @include button-variant($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg);
     }
 }
 
@@ -100,7 +100,7 @@ fieldset:disabled a.btn {
 // Make a button look and behave like a link
 .btn-link {
     text-decoration: $link-decoration;
-    @include button-color($link-color, transparent, transparent, $link-hover-color, transparent, transparent, transparent);
+    @include button-variant($link-color, transparent, transparent, $link-hover-color, transparent, transparent, transparent);
     @include box-shadow(none);
 
     @include hover-focus {
