--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -3,7 +3,7 @@
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
 
-@mixin button-color($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg) {
+@mixin button-variant($color, $bg, $border, $hover-color, $hover-bg, $hover-border, $active-hover-bg) {
     color: $color;
     background-color: $bg;
     border-color: $border;
