--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -17,8 +17,7 @@
     }
 
     // Default color (linked badges get darker on :hover)
-    $color: color-if-contrast($badge-default-color, $badge-default-bg);
-    @include badge-variant($badge-default-color, $badge-default-bg, $badge-default-bg, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-bg);
+    @include badge-variant($badge-default-color, $badge-default-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
 }
 
 // Quick fix for badges in buttons
@@ -60,13 +59,7 @@ a.badge {
 
 // Outline (linked badges get color fill on :hover)
 .badge-outline {
-    $bg:          $badge-outline-bg;
-    $hover-bg:    $badge-default-bg;
-
-    $color: $badge-default-outline-color;
-    $hover-color: color-if-contrast($color, $hover-bg);
-
-    @include badge-variant($color, $badge-outline-bg, $hover-bg, $hover-color, $hover-bg, $hover-bg);
+    @include badge-variant($badge-default-color, $badge-outline-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
 }
 @each $theme, $colors in $context-themes {
     $bg:          $badge-outline-bg;
